fix header margins, width and text alignment of section headers

--- a/module2-solution/css/module2.css
+++ b/module2-solution/css/module2.css
@@ -6,6 +6,8 @@
 h1 {
   text-align: center;
   font-size: 1.75em;
+  margin-top: 30px;
+  margin-bottom: 25px;
 }
 
 body {
@@ -32,6 +34,9 @@ p {
   position: relative;
   top: -3px;
   right: -3px;
+  width: 100px;
+  text-align: center;
+  font-weight: bold;
 }
 
 /* Simple Responsive Framework. */
